added new img directory

--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
 		</nav>
 	</div>
 </header>
+<div id="hero" class="">
+	<div class=""></div>
+</div>
 <div class="container">
 	<div class="row my-3">
 		<div class="col-12 text-center text-white">
