added classes and adjusted html

--- a/index.html
+++ b/index.html
@@ -64,10 +64,14 @@
 		</nav>
 	</div>
 </header>
-<div id="hero" class="container-fluid">
-	<div class="row">
-		<h1 class="display-2">Brazilian Jiu-Jitsu</h1>
-		<p class="lead">This is my Brazilian Jiu-Jitsu website. I will go into detail about each belt in Brazilain Jiu Jitsu and what each belts signifies.</p>
+<div id="hero" class="py-5 my-5">
+	<div class="container">
+		<div class="row">
+			<div class="justify-content-center align-items-center">
+				<h1 class="display-2">Brazilian Jiu-Jitsu</h1>
+				<p class="lead">This is my Brazilian Jiu-Jitsu website. I will go into detail about each belt in Brazilain Jiu Jitsu and what each belts signifies.</p>
+			</div>
+		</div>
 	</div>
 </div>
 <div class="container">
