commit index only

--- a/index.html
+++ b/index.html
@@ -66,11 +66,9 @@
 </header>
 <div id="hero" class="py-5 my-5">
 	<div class="container">
-		<div class="row">
-			<div class="justify-content-center align-items-center">
-				<h1 class="display-2">Brazilian Jiu-Jitsu</h1>
-				<p class="lead">This is my Brazilian Jiu-Jitsu website. I will go into detail about each belt in Brazilain Jiu Jitsu and what each belts signifies.</p>
-			</div>
+		<div class="row d-flex justify-content-center align-items-center">
+			<h1 class="display-2 text-center">Brazilian Jiu-Jitsu</h1>
+			<p class="lead">This is my Brazilian Jiu-Jitsu website. I will go into detail about each belt in Brazilain Jiu Jitsu and what each belts signifies.</p>
 		</div>
 	</div>
 </div>
