--- a/index.html
+++ b/index.html
@@ -26,6 +26,17 @@
 		-webkit-background-size: cover;
 		-moz-background-size: cover;
 		background-size: cover;
+		min-height: 100%;
+	}
+	@media only screen and (min-width:992px) {
+		#hero {
+			min-height: 500px;
+		}
+	}
+	@media only screen and (max-width:991px) {
+		#hero {
+			min-height: 350px;
+		}
 	}
 </style>
 <header id="header">
@@ -64,7 +75,7 @@
 		</nav>
 	</div>
 </header>
-<div id="hero" class="py-5 my-5">
+<div id="hero">
 	<div class="container">
 		<div class="row d-flex justify-content-center align-items-center">
 			<h1 class="display-2 text-center">Brazilian Jiu-Jitsu</h1>
