update all html

--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
 		</nav>
 	</div>
 </header>
+<!-- hero image with intro text -->
 <div id="hero">
 	<div class="container">
 		<div class="row d-flex justify-content-center align-items-center">
@@ -83,13 +84,8 @@
 		</div>
 	</div>
 </div>
-<div class="container">
-	<div class="row my-3">
-		<div class="col-12 text-center text-white">
-			<h1 class="display-2">Brazilian Jiu-Jitsu</h1>
-			<p class="lead">This is my Brazilian Jiu-Jitsu website. I will go into detail about each belt in Brazilain Jiu Jitsu and what each belts signifies.</p>
-		</div>
-	</div>
+<!-- app content -->
+<div role="main" class="container">
 	<!-- Introduction to Brazilian Jiu-Jitsu -->
 	<div id="bjj_intro" class="row">
 		<div class="col-12 text-white">
