--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 		-moz-background-size: cover;
 		background-size: cover;
 		min-height: 100%;
+		padding-bottom: 55px;
 	}
 	@media only screen and (min-width:992px) {
 		#hero {
