--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <style>
 	body {background-color: #505050;}
 	#hero {
-		margin: 0 0 55px 0;
+		padding: 0 0 55px 0;
 	}
 	.heroInner {
 		background:
@@ -82,9 +82,11 @@
 <div id="hero">
 	<div class="heroInner">
 		<div class="container">
-			<div class="row d-flex justify-content-center align-items-center">
-				<h1 class="display-2 text-center">Brazilian Jiu-Jitsu</h1>
-				<p class="lead">This is my Brazilian Jiu-Jitsu website. I will go into detail about each belt in Brazilain Jiu Jitsu and what each belts signifies.</p>
+			<div class="row d-flex">
+				<div class="justify-content-center align-items-center"></div>
+					<h1 class="display-2 text-center">Brazilian Jiu-Jitsu</h1>
+					<p class="lead">This is my Brazilian Jiu-Jitsu website. I will go into detail about each belt in Brazilain Jiu Jitsu and what each belts signifies.</p>
+				</div>
 			</div>
 		</div>
 	</div>
