--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 	<div class="heroInner">
 		<div class="container">
 			<div class="row d-flex">
-				<div class="justify-content-center align-items-center"></div>
+				<div class="justify-content-center align-items-center">
 					<h1 class="display-2 text-center">Brazilian Jiu-Jitsu</h1>
 					<p class="lead">This is my Brazilian Jiu-Jitsu website. I will go into detail about each belt in Brazilain Jiu Jitsu and what each belts signifies.</p>
 				</div>
