--- a/index.html
+++ b/index.html
@@ -82,9 +82,11 @@
 <div id="hero">
 	<div class="heroInner">
 		<div class="container h-100">
-			<div class="row h-100 align-items-center">
-				<h1 class="display-2 text-center">Brazilian Jiu-Jitsu</h1>
-				<p class="lead">This is my Brazilian Jiu-Jitsu website. I will go into detail about each belt in Brazilain Jiu Jitsu and what each belts signifies.</p>
+			<div class="row h-100 justify-content-center align-items-center">
+				<div class="col-12"></div>
+					<h1 class="display-2 text-center">Brazilian Jiu-Jitsu</h1>
+					<p class="lead">This is my Brazilian Jiu-Jitsu website. I will go into detail about each belt in Brazilain Jiu Jitsu and what each belts signifies.</p>
+				</div>
 			</div>
 		</div>
 	</div>
