--- a/index.html
+++ b/index.html
@@ -29,16 +29,16 @@
 		-webkit-background-size: cover;
 		-moz-background-size: cover;
 		background-size: cover;
-		min-height: 100%;
+		height: 100%;
 	}
 	@media only screen and (min-width:992px) {
 		.heroInner {
-			min-height: 500px;
+			height: 500px;
 		}
 	}
 	@media only screen and (max-width:991px) {
 		.heroInner {
-			min-height: 350px;
+			height: 350px;
 		}
 	}
 </style>
