complete hero image and css

--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
 		-webkit-background-size: cover;
 		-moz-background-size: cover;
 		background-size: cover;
+		background-attachment: fixed;
+		background-position: center center;
 		height: 100%;
 	}
 	@media only screen and (min-width:992px) {
