--- a/index.html
+++ b/index.html
@@ -164,104 +164,46 @@
 		</div>
 	</div>
 </div>
-
-
 <script>
-	// This is an array of data
-	var data = [
-		{
-			"id": 0,
-			"name": "White Belt",
-			"meaning": "White belt is the first belt within Brazilian jiu-jitsu. The rank is held by any practitioner new to the art and has no prerequisite. Some instructors and other high-level practitioners think that a white belt's training should emphasize escapes and defensive positioning since a white belt will often fight from inferior positions, especially when training with more experienced practitioners. Most academies will additionally require that a white belt level practitioner works to obtain a well-rounded skills set, with a knowledge of basic offensive moves, such as common submissions and guard passes.",
-			"duration": "1.5-2 years",
-		},
-		{
-			"id": 1,
-			"name": "Blue Belt",
-			"meaning": "Blue belt is often the second adult rank in the Brazilian jiu-jitsu.  At the blue belt level, students gain a wide breadth of technical knowledge and undertake hundreds of hours of mat time to learn how to implement these moves efficiently.  Blue belt is often the rank at which the student learns a large number of techniques. Not all Brazilian jiu-jitsu schools or regulatory bodies award the blue belt as the second adult belt.[10] Although many Brazilian jiu-jitsu organizations adhere to the IBJJF standard of awarding the yellow, orange, and green belt exclusively as part of a youth belt system (under 16 years of age), some supplement the time between white belt and blue belt with one or more belts of these colors. The IBJJF requires that a practitioner be at least 16 years old to receive a blue belt, thereby officially entering into the adult belt system.",
-			"duration": "2-3 years",
-		},
-		{
-			"id": 2,
-			"name": "Purple Belt",
-			"meaning": "Purple belt is the intermediate adult ranking in Brazilian jiu-jitsu. The purple belt level practitioner has gained a large amount of knowledge, and purple belts are generally considered qualified to help instruct lower-ranked students. The IBJJF requires students to be at least 16 years old and recommends they have spent a minimum of two years ranked as a blue belt to be eligible for a purple belt, with slightly different requirements for those graduating directly from the youth belts",
-			"duration": "1.5 years minimum",
-		},
-		{
-			"id": 3,
-			"name": "Brown Belt",
-			"meaning": "Brown belt is the highest ranking color belt below black belt in Brazilian jiu-jitsu. Earning a brown belt typically requires at least five years of dedicated training. It is often thought of as a time for refining techniques. The IBJJF requires that students be at least 18 years old and recommends they have spent a minimum of 18 months as a purple belt to be eligible for a brown belt.",
-			"duration": "1.5 years minimum",
-		},
-		{
-			"id": 4,
-			"name": "Black Belt",
-			"meaning": "As with many other martial arts, the black belt is the highest common belt within Brazilian jiu-jitsu, denoting an expert level of technical and practical skills. Brazilian jiu-jitsu black belts are often addressed within the art as professor, although some schools and organizations reserve this honorific for more senior black belt holders. The IBJJF requires that a student be at least 19 years old and recommends they have spent a minimum of 1 year ranked as a brown belt to be eligible for a black belt. The black belt itself has six different degrees of expertise, similar to dan in traditional Japanese arts.",
-			"duration": "variable",
-		},
-		{
-			"id": 5,
-			"name": "Red / Black belt (Coral belt)",
-			"meaning": "When a Brazilian jiu-jitsu black belt reaches the seventh degree, he or she is awarded an alternating red-and-black belt similar to the one earned at the sixth degree in Judo. This belt is commonly known as a coral belt, after the coral snake. Coral belts are very experienced practitioners, most of whom have made a large impact on Brazilian jiu-jitsu, and are often addressed within the art by the title master.",
-			"duration": "variable",
-		},
-		{
-			"id": 6,
-			"name": "Red / White belt (Coral belt)",
-			"meaning": "The International Brazilian jiu-jitsu Federation in 2013, amended the graduation guidelines with respect to the transition between seventh degree and eighth degree black belt. In short, a practitioner who has achieved the rank of 8th degree black belt will wear a red and white belt,[20] which is also commonly called a coral belt.",
-			"duration": "variable",
-		},
-		{
-			"id": 7,
-			"name": "Red / White belt (Coral belt)",
-			"meaning": "According to Renzo and Royler Gracie, in Brazilian jiu-jitsu the red belt is reserved \"for those whose influence and fame takes them to the pinnacle of art\". It is awarded in lieu of a ninth and tenth degree black belt. If a practitioner receives his or her black belt at 19 years old, the earliest they could expect to receive a ninth degree red belt would be at the age of 67. Brazilian jiu-jitsu red belt holders are often addressed within the art by the title grandmaster. The 10th degree was given only to the pioneers of Brazilian Jiu-Jitsu, and the Gracie brothers: Carlos, Oswaldo, George, Gaston and Helio.",
-			"duration": "variable",
-		}
-	]
-
-
+	// variables
 	var len = 0;
 	var id, readMore;
 	var output = "";
+	var xhr = new XMLHttpRequest();
 
-    var xhr = new XMLHttpRequest();
-    xhr.open('GET', 'json/data.json', true);
-    xhr.onreadystatechange = function(e) {
-       if (this.status == 200 && this.readyState == 4) {
-    //       var file = new File([this.response], 'temp');
-    //       var fileReader = new FileReader();
-    //       fileReader.addEventListener('load', function(){
-    //            //do stuff with fileReader.result
-    //       });
-    //       fileReader.readAsText(file);
-           console.log(this);
-           console.log(e);
-      }
-    }
-    xhr.send();
-    // console.log(xhr);
+	xhr.open('GET', 'json/data.json', true);
+	xhr.onreadystatechange = function(response) {
+		if (this.status == 200 && this.readyState == 4) {
 
-	// console.log(readMore);
-	// this is my mehotd to return the array above.  I thought that a for loop was the best solution to output the data from the array.
-	for (var i = 0; i < data.length; i++) {
-		id = data[i].id;
-		var string = data[i].meaning;
-		var trimmedString = string.substring(0, 200) + '...';
+			var data = this.response;
+			// console.log(this.response);
+			// console.log(xhr);
+			// console.log(readMore);
+			console.log(data);
 
-		output += '<div class="col-3">' +
-				'<div class="card text-white bg-secondary mb-3">' +
-				'<div class="card-header">' + data[i].name + '</div>' +
-				'<div class="card-body">'+
-				'<h5 class="card-title">' + data[i].duration +  '</h5>'+
-				'<p class="card-text">' + trimmedString + ' <a href="#" id="id-' + id + '" class="d-block" data-toggle="modal" data-target="#readMoreModalCenter-'+id+'">read more</a></p>'+
-				'<div class="modal fade" id="readMoreModalCenter-'+id+'" tabindex="-1" role="dialog" aria-labelledby="readMoreModalCenterTitle" aria-hidden="true"><div class="modal-dialog modal-dialog-centered" role="document"><div class="modal-content"><div id="readMore" class="modal-body text-secondary">' + data[i].meaning + '</div></div></div></div>' +
-				'</div>'+
-				'</div>'+
-				'</div>';
+			// this is my mehotd to return the array above.  I thought that a for loop was the best solution to output the data from the array.
+			for (var i = 0; i < data.length; i++) {
+
+				id = data[i].id;
+				var string = data[i].meaning;
+				var trimmedString = string.substring(0, 200) + '...';
+
+				output += '<div class="col-3">' +
+						'<div class="card text-white bg-secondary mb-3">' +
+						'<div class="card-header">' + data[i].name + '</div>' +
+						'<div class="card-body">'+
+						'<h5 class="card-title">' + data[i].duration +  '</h5>'+
+						'<p class="card-text">' + trimmedString + ' <a href="#" id="id-' + id + '" class="d-block" data-toggle="modal" data-target="#readMoreModalCenter-'+id+'">read more</a></p>'+
+						'<div class="modal fade" id="readMoreModalCenter-'+id+'" tabindex="-1" role="dialog" aria-labelledby="readMoreModalCenterTitle" aria-hidden="true"><div class="modal-dialog modal-dialog-centered" role="document"><div class="modal-content"><div id="readMore" class="modal-body text-secondary">' + data[i].meaning + '</div></div></div></div>' +
+						'</div>'+
+						'</div>'+
+						'</div>';
+			}
+			// This is my return statement to output the array into HTML
+			document.getElementById("belt_ranking_system").innerHTML = output;
+		}
 	}
-	// This is my return statement to output the array into HTML
-	document.getElementById("belt_ranking_system").innerHTML = output;
-
+	xhr.send();
 </script>
 
 <!-- Optional JavaScript -->
