--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 		padding: 0 0 55px 0;
 	}
 	.heroInner {
-		background: -webkit-linear-gradient(rgba(0, 123, 225, 0.45), rgba(0, 123, 225, 0.45)), url('/img/hero_image.jpg');
-		background: -moz-linear-gradient(rgba(0, 123, 225, 0.45), rgba(0, 123, 225, 0.45)), url('/img/hero_image.jpg');
-		background: linear-gradient(rgba(0, 123, 225, 0.45), rgba(0, 123, 225, 0.45)), url('/img/hero_image.jpg');
+		background: -webkit-linear-gradient(rgba(0, 123, 225, 0.45), rgba(0, 123, 225, 0.45)), url('img/hero_image.jpg');
+		background: -moz-linear-gradient(rgba(0, 123, 225, 0.45), rgba(0, 123, 225, 0.45)), url('img/hero_image.jpg');
+		background: linear-gradient(rgba(0, 123, 225, 0.45), rgba(0, 123, 225, 0.45)), url('img/hero_image.jpg');
 		background-repeat: no-repeat;
 		-webkit-background-size: cover;
 		-moz-background-size: cover;
