--- a/index.html
+++ b/index.html
@@ -164,43 +164,52 @@
 	var len = 0;
 	var id, readMore;
 	var output = "";
-	var xhr = new XMLHttpRequest();
 
-	xhr.open('GET', 'json/data.json', true);
-	xhr.onreadystatechange = function(response) {
-		if (this.status == 200 && this.readyState == 4) {
+	function loadJSON(callback) {
+		var xhr = new XMLHttpRequest();
+		xhr.overrideMimeType("application/json");
+		xhr.open('GET', 'json/data.json', true);
+		// Replace 'my_data' with the path to your file
+		xhr.onreadystatechange = function() {
+			if (xhr.readyState === 4 && xhr.status === "200") {
+				// Required use of an anonymous callback
+				// as .open() will NOT return a value but simply returns undefined in asynchronous mode
+				callback(xhr.responseText);
+				console.log(callback);
 
-			var data = this.response;
-			// console.log(this.response);
-			// console.log(xhr);
-			// console.log(readMore);
-			console.log(data);
+				/*
+                for (var i = 0; i < data.length; i++) {
 
-			// this is my mehotd to return the array above. I thought that a for loop was the best solution to output the data from the array.
-			for (var i = 0; i < data.length; i++) {
+                    id = data[i].id;
+                    var string = data[i].meaning;
+                    var trimmedString = string.substring(0, 200) + '...';
 
-				id = data[i].id;
-				var string = data[i].meaning;
-				var trimmedString = string.substring(0, 200) + '...';
+                    output += '<div class="col-3">' +
+                            '<div class="card text-white bg-secondary mb-3">' +
+                            '<div class="card-header">' + data[i].name + '</div>' +
+                            '<div class="card-body">'+
+                            '<h5 class="card-title">' + data[i].duration +  '</h5>'+
+                            '<p class="card-text">' + trimmedString + ' <a href="#" id="id-' + id + '" class="d-block" data-toggle="modal" data-target="#readMoreModalCenter-'+id+'">read more</a></p>'+
+                            '<div class="modal fade" id="readMoreModalCenter-'+id+'" tabindex="-1" role="dialog" aria-labelledby="readMoreModalCenterTitle" aria-hidden="true"><div class="modal-dialog modal-dialog-centered" role="document"><div class="modal-content"><div id="readMore" class="modal-body text-secondary">' + data[i].meaning + '</div></div></div></div>' +
+                            '</div>'+
+                            '</div>'+
+                            '</div>';
+                }
+                // This is my return statement to output the array into HTML
+                document.getElementById("belt_ranking_system").innerHTML = output;
 
-				console.log(data);
-
-				/*output += '<div class="col-3">' +
-						'<div class="card text-white bg-secondary mb-3">' +
-						'<div class="card-header">' + data[i].name + '</div>' +
-						'<div class="card-body">'+
-						'<h5 class="card-title">' + data[i].duration +  '</h5>'+
-						'<p class="card-text">' + trimmedString + ' <a href="#" id="id-' + id + '" class="d-block" data-toggle="modal" data-target="#readMoreModalCenter-'+id+'">read more</a></p>'+
-						'<div class="modal fade" id="readMoreModalCenter-'+id+'" tabindex="-1" role="dialog" aria-labelledby="readMoreModalCenterTitle" aria-hidden="true"><div class="modal-dialog modal-dialog-centered" role="document"><div class="modal-content"><div id="readMore" class="modal-body text-secondary">' + data[i].meaning + '</div></div></div></div>' +
-						'</div>'+
-						'</div>'+
-						'</div>';*/
-			}
-			// This is my return statement to output the array into HTML
-			document.getElementById("belt_ranking_system").innerHTML = output;
+              */
+				}
+			};
+			xhr.send(null);
 		}
-	}
-	xhr.send();
+
+		function init() {
+			loadJSON((response) => {
+				// Parse JSON string into object
+				var actual_JSON = JSON.parse(response);
+			});
+		}
 </script>
 
 <!-- Optional JavaScript -->
