--- a/index.html
+++ b/index.html
@@ -163,53 +163,52 @@
 	// variables
 	var len = 0;
 	var id, readMore;
-	var output = "";
+	var output = ""
+    var xhr = new XMLHttpRequest();
 
-	function loadJSON(callback) {
-		var xhr = new XMLHttpRequest();
-		xhr.overrideMimeType("application/json");
-		xhr.open('GET', 'json/data.json', true);
-		// Replace 'my_data' with the path to your file
-		xhr.onreadystatechange = function() {
-			if (xhr.readyState === 4 && xhr.status === "200") {
-				// Required use of an anonymous callback
-				// as .open() will NOT return a value but simply returns undefined in asynchronous mode
-				callback(xhr.responseText);
-				console.log(callback);
+    xhr.overrideMimeType("application/json");
+    xhr.open('GET', 'json/data.json', true);
 
-				/*
-                for (var i = 0; i < data.length; i++) {
+    // Replace 'my_data' with the path to your file
+    xhr.onreadystatechange = function() {
+        if (xhr.readyState === 4 && xhr.status === "200") {
+            // Required use of an anonymous callback
+            // as .open() will NOT return a value but simply returns undefined in asynchronous mode
+            callback(xhr.responseText);
+            console.log(callback);
 
-                    id = data[i].id;
-                    var string = data[i].meaning;
-                    var trimmedString = string.substring(0, 200) + '...';
 
-                    output += '<div class="col-3">' +
-                            '<div class="card text-white bg-secondary mb-3">' +
-                            '<div class="card-header">' + data[i].name + '</div>' +
-                            '<div class="card-body">'+
-                            '<h5 class="card-title">' + data[i].duration +  '</h5>'+
-                            '<p class="card-text">' + trimmedString + ' <a href="#" id="id-' + id + '" class="d-block" data-toggle="modal" data-target="#readMoreModalCenter-'+id+'">read more</a></p>'+
-                            '<div class="modal fade" id="readMoreModalCenter-'+id+'" tabindex="-1" role="dialog" aria-labelledby="readMoreModalCenterTitle" aria-hidden="true"><div class="modal-dialog modal-dialog-centered" role="document"><div class="modal-content"><div id="readMore" class="modal-body text-secondary">' + data[i].meaning + '</div></div></div></div>' +
-                            '</div>'+
-                            '</div>'+
-                            '</div>';
-                }
-                // This is my return statement to output the array into HTML
-                document.getElementById("belt_ranking_system").innerHTML = output;
+            for (var i = 0; i < data.length; i++) {
 
-              */
-				}
-			};
-			xhr.send(null);
-		}
+                id = data[i].id;
+                var string = data[i].meaning;
+                var trimmedString = string.substring(0, 200) + '...';
 
-		function init() {
+                output += '<div class="col-3">' +
+                    '<div class="card text-white bg-secondary mb-3">' +
+                    '<div class="card-header">' + data[i].name + '</div>' +
+                    '<div class="card-body">' +
+                    '<h5 class="card-title">' + data[i].duration + '</h5>' +
+                    '<p class="card-text">' + trimmedString + ' <a href="#" id="id-' + id + '" class="d-block" data-toggle="modal" data-target="#readMoreModalCenter-' + id + '">read more</a></p>' +
+                    '<div class="modal fade" id="readMoreModalCenter-' + id + '" tabindex="-1" role="dialog" aria-labelledby="readMoreModalCenterTitle" aria-hidden="true"><div class="modal-dialog modal-dialog-centered" role="document"><div class="modal-content"><div id="readMore" class="modal-body text-secondary">' + data[i].meaning + '</div></div></div></div>' +
+                    '</div>' +
+                    '</div>' +
+                    '</div>';
+            }
+            // This is my return statement to output the array into HTML
+            document.getElementById("belt_ranking_system").innerHTML = output;
+
+        }
+    }
+
+    xhr.send();
+
+		/*function init() {
 			loadJSON((response) => {
 				// Parse JSON string into object
 				var actual_JSON = JSON.parse(response);
 			});
-		}
+		}*/
 </script>
 
 <!-- Optional JavaScript -->
