--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 <footer id="footer" class="bg-secondary">
 	<div class="container">
 		<div class="row">
-			<div class="col-12"><p class="my-3 text-white">&copy 2019 Mike Martello</p></div>
+			<div class="col-12"><p class="my-3 text-white">&copy; 2019 Mike Martello</p></div>
 		</div>
 	</div>
 </footer>
